# ckan-bundle

./: .gitignore  MANIFEST.json  NOTICE  README.md
ckanext-data-gov-gr/: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  test.ini
ckanext-data-gov-gr/ckanext/data_gov_gr/: helpers.py  plugin.py  presets.json  stats.py  views.py
ckanext-data-gov-gr/ckanext/data_gov_gr/assets/: decision-visibility.js  webassets.yml
ckanext-data-gov-gr/ckanext/data_gov_gr/harvesters/: __init__.py  apd_kritis_harvester.py  attica_harvester.py  bank_of_greece_harvester.py  base.py  core_ckan_harvester.py  custom_dcat_harvester.py  dkan_ckan_harvester.py  ekan_dcat_harvester.py
ckanext-data-gov-gr/ckanext/data_gov_gr/i18n/: ckanext-data_gov_gr.pot
ckanext-data-gov-gr/ckanext/data_gov_gr/logic/: actions.py  auth.py  mqa_calculator.py  validators.py
ckanext-data-gov-gr/ckanext/data_gov_gr/public/: ConfirmModal.js  add_dataset.css  data_gov_gr.css  dataset-view.js  map_search.css  map_search.js  mqa_styles.css  script-search.js  select-location.css  select-location.js
ckanext-data-gov-gr/ckanext/data_gov_gr/schemas/: data_service.yaml  dcat_ap_gr_recommended.yaml  decision.yaml  publisher_organization.yaml
ckanext-data-gov-gr/ckanext/data_gov_gr/templates/: base.html  footer.html  header.html  header_index.html  more_base.html
ckanext-data-gov-gr/ckanext/data_gov_gr/templates/admin/: config.html
ckanext-data-gov-gr/ckanext/data_gov_gr/templates/ckanext_pages/: blog_edit.html  page_edit.html  (+2 more)
ckanext-data-gov-gr/ckanext/data_gov_gr/tests/: test_plugin.py
(+414 files in other folders)
